# jugglinglab

./: .gitignore  README.md
jugglinglab/: Cargo.toml
jugglinglab/crates/juggling-core/: Cargo.toml
jugglinglab/crates/juggling-core/src/: animation.rs  animation_prefs.rs  curve.rs  generator.rs  hand_siteswap.rs  jml.rs  ladder.rs  layout.rs  lib.rs  library.rs  mhn_body.rs  mhn_hands.rs  mhn_jml.rs  mhn_matrix.rs  mhn_symmetry.rs  mhn_throw.rs  mutator.rs  optimizer.rs  parameter_list.rs  permutation.rs  prop.rs  share.rs  siteswap.rs  transitioner.rs  util.rs
jugglinglab/crates/juggling-server/: Cargo.toml
jugglinglab/crates/juggling-server/src/: main.rs
jugglinglab/crates/juggling-web/: Cargo.toml
jugglinglab/crates/juggling-web/src/: app.rs  audio.rs  canvas.rs  export.rs  lib.rs
jugglinglab/public/: app.css  index.html
