[workspace]
members = [
    "crates/juggling-core",
    "crates/juggling-web",
    "crates/juggling-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.9"
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
color_quant = "1.1.0"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
gif = "0.14.2"
good_lp = { version = "1.15.2", default-features = false, features = ["microlp"] }
js-sys = "0.3.103"
leptos = { version = "0.9.0-alpha", features = ["csr"] }
roxmltree = "0.20.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4.56"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["fs"] }
wasm-bindgen = "0.2.126"
web-sys = "0.3.103"
